--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -1,9 +1,11 @@
 project(${BR_SERVER_NAME})
 
 set(BR_SERVER_HEADERS
-	BattleshipRoyale.h)
+	BattleshipRoyale.h
+	../bd/Server.h)
 
 set(BR_SERVER_SOURCES
-	BattleshipRoyale.cpp)
+	BattleshipRoyale.cpp
+	../bd/Server.cpp)
 
 add_executable(${BR_SERVER_NAME} ${BR_SERVER_HEADERS} ${BR_SERVER_SOURCES})
