--- a/src/client_curses/CMakeLists.txt
+++ b/src/client_curses/CMakeLists.txt
@@ -10,5 +10,5 @@ set(BR_CLIENT_CURSES_SOURCES
 
 add_executable(${BR_CLIENT_CURSES_NAME} ${BR_CLIENT_CURSES_HEADERS} ${BR_CLIENT_CURSES_SOURCES})
 
-include_directories(${PDCURSES_LIB_INCLUDE})
-target_link_libraries(${BR_CLIENT_CURSES_NAME} ${PDCURSES_LIB})
+#include_directories(${PDCURSES_LIB_INCLUDE})
+#target_link_libraries(${BR_CLIENT_CURSES_NAME} ${PDCURSES_LIB})
