--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,10 +4,7 @@ cmake_minimum_required (VERSION 2.6)
 # Variables
 ################################
 set(BR_SERVER 1 CACHE BOOL "BR_SERVER")
-set(BR_CLIENT_CURSES 1 CACHE BOOL "BR_CLIENT_CURSES")
-
-#set(PDCURSES_LIB "${CMAKE_SOURCE_DIR}/lib/pdcurses/pdcurses.a" CACHE FILEPATH "PDCurses *.a file")
-#set(PDCURSES_LIB_INCLUDE "${CMAKE_SOURCE_DIR}/lib/pdcurses/include" CACHE PATH "PDCurses lib include")
+set(BR_CLIENT_CURSES 0 CACHE BOOL "BR_CLIENT_CURSES")
 
 set(BR_SERVER_NAME BattleshipRoyale_Server)
 set(BR_CLIENT_CURSES_NAME BattleshipRoyale_Client_curses)
@@ -24,13 +21,10 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
 # 
 ################################
 
-#add_subdirectory(src/skin)
-#add_subdirectory(src/bd)
-
 if(BR_CLIENT_CURSES)
-	add_subdirectory(src/client_curses)
+	add_subdirectory(src/client)
 endif()
 
-if(ISS_OPTIMIZED)
+if(BR_SERVER)
 	add_subdirectory(src/server)
 endif()
