--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -12,8 +12,20 @@ set(BR_SERVER_SOURCES
 	Map.cpp
 	Player.cpp)
 
+# Boost
+include_directories(${Boost_INCLUDE_DIRS})
+
+# Exec
 add_executable(${BR_SERVER_NAME} ${BR_SERVER_HEADERS} ${BR_SERVER_SOURCES})
 
 include_directories(${SPDLOG_LIB_INCLUDE})
 include_directories(${CXXOPTS_LIB_INCLUDE})
 include_directories(${SQLITE3_LIB_INCLUDE})
+
+target_link_libraries(${BR_SERVER_NAME} ${SQLITE3_LIB})
+
+# Boost
+target_link_libraries(${BR_SERVER_NAME} ${Boost_LIBRARIES})
+if(MINGW)
+  target_link_libraries(${BR_SERVER_NAME} ws2_32)
+endif()
