--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -28,7 +28,7 @@ add_executable(${BR_SERVER_NAME} ${BR_SERVER_HEADERS} ${BR_SERVER_SOURCES})
 
 include_directories(${SPDLOG_LIB_INCLUDE})
 include_directories(${CXXOPTS_LIB_INCLUDE})
-#include_directories(${SQLITE3_LIB_INCLUDE})
+include_directories(${SQLITE3_LIB_INCLUDE})
 include_directories(${PICOSHA2_LIB_INCLUDE})
 
 #target_link_libraries(${BR_SERVER_NAME} ${SQLITE3_LIB})
