--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,19 +18,21 @@ set(BR_CLIENT_CURSES_NAME BattleshipRoyale_Client_curses)
 set(SPDLOG_LIB_INCLUDE "${CMAKE_SOURCE_DIR}/lib/spdlog" CACHE PATH "spdlog lib")
 set(CXXOPTS_LIB_INCLUDE "${CMAKE_SOURCE_DIR}/lib/cxxopts" CACHE PATH "cxxopts lib")
 set(SQLITE3_LIB_INCLUDE "${CMAKE_SOURCE_DIR}/lib/sqlite3" CACHE PATH "sqlite3 lib")
-#set(SQLITE3_LIB "${CMAKE_SOURCE_DIR}/lib/sqlite3/sqlite3.dll" CACHE FILEPATH "sqlite3 *.dll file")
 set(PICOSHA2_LIB_INCLUDE "${CMAKE_SOURCE_DIR}/lib/picosha2" CACHE PATH "picosha2 lib")
+set(SQLITE3_INCLUDE_DIR "${CMAKE_SOURCE_DIR}/lib/sqlite3/include" CACHE PATH "sqslite3 lib include")
 
 # SQLite3
 
 if(MINGW)
     set(SQLITE3_LIBRARY "c:/sqlite3/lib/sqlite3.dll" CACHE FILEPATH "sqlite3 *.dll file)")
-    set(SQLITE3_INCLUDE_DIR "c:/sqlite3/include")
+    #set(SQLITE3_INCLUDE_DIR "c:/sqlite3/include")
 else()
-    find_package(SQLite3 REQUIRED)
-    include(FindThreads)
+    set(SQLITE3_LIBRARY "${CMAKE_SOURCE_DIR}/lib/sqlite3/sqlite3" CACHE FILEPATH "sqlite3 lib file)")
+    #set(SQLITE3_INCLUDE_DIR "${CMAKE_SOURCE_DIR}/lib/sqlite3/include")
+    #find_package(SQLite3 REQUIRED)
+    #include(FindThreads)
     # SQLITE3_LIBRARIES
-    set(SQLITE3_LIBRARIES SQLite3)
+    #set(SQLITE3_LIBRARIES SQLite3)
 endif()
 
 # Boost
