--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -1,5 +1,9 @@
 project(${BR_SERVER_NAME})
 
+################################
+# Files
+################################
+
 set(BR_SERVER_HEADERS
 	BattleshipRoyale.h
 	Db.h
@@ -13,29 +17,35 @@ set(BR_SERVER_SOURCES
 	Player.cpp)
 
 
-# SQLite3
-include_directories(${SQLITE3_INCLUDE_DIR})
-
-
-# Boost
-include_directories(${Boost_INCLUDE_DIRS})
-
-# Exec
-add_executable(${BR_SERVER_NAME} ${BR_SERVER_HEADERS} ${BR_SERVER_SOURCES})
+################################
+# Inclu desu
+################################
 
 include_directories(${SPDLOG_LIB_INCLUDE})
 include_directories(${CXXOPTS_LIB_INCLUDE})
 include_directories(${SQLITE3_LIB_INCLUDE})
 include_directories(${PICOSHA2_LIB_INCLUDE})
 
-#target_link_libraries(${BR_SERVER_NAME} ${SQLITE3_LIB})
-
-# SQLite3
-target_link_libraries (${BR_SERVER_NAME} ${SQLITE3_LIBRARY})
-
 # Boost
-target_link_libraries(${BR_SERVER_NAME} ${Boost_LIBRARIES})
-if(MINGW)
+include_directories(${Boost_INCLUDE_DIRS})
+
+################################
+# Executable
+################################
+add_executable(${BR_SERVER_NAME} ${BR_SERVER_HEADERS} ${BR_SERVER_SOURCES})
+
+################################
+# Link Lib
+################################
+if(BR_WINDOWS)
+	target_link_libraries(${BR_SERVER_NAME} ${Boost_LIBRARIES})
+	target_link_libraries (${BR_SERVER_NAME} ${SQLITE3_LIBRARY})
+endif()
+
+################################
+# Specific
+################################
+if(BR_WINDOWS)
 	target_link_libraries(${BR_SERVER_NAME} ws2_32)
 	target_link_libraries(${BR_SERVER_NAME} wsock32)
 endif()
