--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -1,7 +1,7 @@
 project(${BR_SERVER_NAME})
 
 ################################
-# Files
+# Sources
 ################################
 
 set(BR_SERVER_HEADERS
@@ -16,16 +16,6 @@ set(BR_SERVER_SOURCES
 	Map.cpp
 	Player.cpp)
 
-
-################################
-# Inclu desu
-################################
-
-include_directories(${SPDLOG_LIB_INCLUDE})
-include_directories(${CXXOPTS_LIB_INCLUDE})
-include_directories(${SQLITE3_LIB_INCLUDE})
-include_directories(${PICOSHA2_LIB_INCLUDE})
-
 ################################
 # Executable
 ################################
@@ -35,20 +25,13 @@ add_executable(${BR_SERVER_NAME} ${BR_SERVER_HEADERS} ${BR_SERVER_SOURCES})
 # Link Lib
 ################################
 
-if(BR_WINDOWS)
-	target_link_libraries (${BR_SERVER_NAME} ${SQLITE3_LIBRARY})
-endif()
-
 if(BR_UNIX)
-	include_directories(/usr/include)
-	link_directories(/usr/lib)
 	target_link_libraries(${BR_SERVER_NAME} sqlite3)
 endif()
 
-################################
-# Specific
-################################
+# OS Specific
 if(BR_WINDOWS)
+	target_link_libraries(${BR_SERVER_NAME} ${SQLITE3_LIBRARY})
 	target_link_libraries(${BR_SERVER_NAME} ws2_32)
 	target_link_libraries(${BR_SERVER_NAME} wsock32)
 endif()
