--- a/src/client/CMakeLists.txt
+++ b/src/client/CMakeLists.txt
@@ -1,18 +1,27 @@
 project(${BR_CLIENT_CURSES_NAME})
 
-set(BR_CLIENT_CURSES_HEADERS
-	BattleshipRoyale.h
-	Registration.h)
+################################
+# Sources
+################################
+
+set(BR_CLIENT_CURSES_HEADERS)
 
 set(BR_CLIENT_CURSES_SOURCES
-	BattleshipRoyale.cpp
-	Registration.cpp)
+	BattleshipRoyale.cpp)
 
 
-find_package(Curses REQUIRED)
-include_directories(${CURSES_INCLUDE_DIR})
+#find_package(Curses REQUIRED)
+#include_directories(${CURSES_INCLUDE_DIR})
+
+################################
+# Executable
+################################
 
 add_executable(${BR_CLIENT_CURSES_NAME} ${BR_CLIENT_CURSES_HEADERS} ${BR_CLIENT_CURSES_SOURCES})
+
+################################
+# Link Lib
+################################
 
 target_link_libraries(${BR_CLIENT_CURSES_NAME} ${CURSES_LIBRARIES})
 
