--- a/src/client/CMakeLists.txt
+++ b/src/client/CMakeLists.txt
@@ -1,14 +1,13 @@
-project(${BR_CLIENT_CURSES_NAME})
+project(${BR_CLIENT_NAME})
 
 ################################
 # Sources
 ################################
 
-set(BR_CLIENT_CURSES_HEADERS)
+set(BR_CLIENT_HEADERS)
 
-set(BR_CLIENT_CURSES_SOURCES
+set(BR_CLIENT_SOURCES
 	BattleshipRoyale.cpp)
-
 
 #find_package(Curses REQUIRED)
 #include_directories(${CURSES_INCLUDE_DIR})
@@ -17,13 +16,24 @@ set(BR_CLIENT_CURSES_SOURCES
 # Executable
 ################################
 
-add_executable(${BR_CLIENT_CURSES_NAME} ${BR_CLIENT_CURSES_HEADERS} ${BR_CLIENT_CURSES_SOURCES})
+add_executable(${BR_CLIENT_NAME} ${BR_CLIENT_HEADERS} ${BR_CLIENT_SOURCES})
 
 ################################
 # Link Lib
 ################################
 
-target_link_libraries(${BR_CLIENT_CURSES_NAME} ${CURSES_LIBRARIES})
+target_link_libraries(${BR_CLIENT_NAME} ${USE_LIB} ${CURSES_LIBRARIES})
+
+#if(BR_UNIX)
+#	target_link_libraries(${BR_CLIENT_NAME} sqlite3)
+#endif()
+
+# OS Specific
+if(BR_WINDOWS)
+	target_link_libraries(${BR_CLIENT_NAME} ${SQLITE3_LIBRARY})
+	target_link_libraries(${BR_CLIENT_NAME} ws2_32)
+	target_link_libraries(${BR_CLIENT_NAME} wsock32)
+endif()
 
 #include_directories(${PDCURSES_LIB_INCLUDE})
-#target_link_libraries(${BR_CLIENT_CURSES_NAME} ${PDCURSES_LIB})
+#target_link_libraries(${BR_CLIENT_NAME} ${PDCURSES_LIB})
