--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -81,7 +81,7 @@ if(BR_WINDOWS)
 endif()
 
 if(BR_UNIX)
-    add_compile_options(-Wall -O0 -pipe -msse2 -fopenmp -lsqlite3 -lpthread)
+    add_compile_options(-Wall -O0 -g -pipe -msse2 -fopenmp -lsqlite3 -lpthread)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp")
 endif()
 
