--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -7,6 +7,7 @@ project(${BR_SERVER_NAME})
 set(BR_SERVER_HEADERS
 	src/con_handler.h
 	src/DB.h
+	src/MiniDB.h
 	src/rand_sse.h
 	src/Regex.h
 	src/Server.h)
@@ -15,6 +16,7 @@ set(BR_SERVER_SOURCES
 	src/BattleshipRoyale.cpp
 	src/con_handler.cpp
 	src/DB.cpp
+	src/MiniDB.cpp
 	src/rand_sse.cpp
 	src/Regex.cpp
 	src/Server.cpp)
